--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,16 @@
-
 [submodule "oca-web"]
 	path = oca-web
 	url = https://github.com/OCA/web
 	branch = 15.0
 [submodule "oca-connector"]
-	path = oca-web
+	path = oca-connector
 	url = https://github.com/OCA/connector
 	branch = 15.0
 [submodule "oca-queue"]
-	path = oca-web
+	path = oca-queue
 	url = https://github.com/OCA/queue
 	branch = 15.0
 [submodule "oca-server-ux"]
-	path = oca-web
+	path = oca-server-ux
 	url = https://github.com/OCA/server-ux
 	branch = 15.0
